--- a/templates/welcom.html
+++ b/templates/welcom.html
@@ -1,4 +1,4 @@
 {% extends "index.html" %}
 {% block content %}
-    <h1>Welcome {{request.form["user"]}}!</h1>
+    <h1>Welcome {{request.form["username"]}}!</h1>
 {% endblock %}
